--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,3 +37,6 @@ jobs:
       run: |
         cd src/scripts/
         python generate_pages.py
+    - name: Create alias wwwroot about public
+      run: |
+        ln -s public/ wwwroot/
