--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,4 +39,4 @@ jobs:
         python generate_pages.py
     - name: Create alias wwwroot about public
       run: |
-        ln -s public/ wwwroot/
+        ln -s public wwwroot
