Retest des fichiers en scindant cette etape en deux pour être sûr que le test s'effectue

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,9 +37,11 @@ jobs:
       run: |
         cd src/scripts/
         python generate_pages.py
-    - name: Test
+    - name: Install html test
       run: |
         sudo apt install -y tidy
+    - name: Test html files
+      run: |
         tidy -e *.html || exit 1
     - name: Create alias wwwroot about public
       run: |
