Ajout le fait de laisser passer le déployement si ce n'est que des warnings

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,7 +42,14 @@ jobs:
         sudo apt install -y tidy
     - name: Test html files
       run: |
-        tidy -e public/**/*.html || exit 1
+        tidy -e public/**/*.html 2> tidy_output.log || true
+        # Check if there are errors in the tidy output
+        if grep -q "Error:" tidy_output.log; then
+          echo "HTML validation errors found!"
+          exit 1
+        else
+          echo "Only warnings or clean HTML found."
+        fi
     - name: Create alias wwwroot about public
       run: |
         ln -s public wwwroot
