--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,6 +37,9 @@ jobs:
       run: |
         cd src/scripts/
         python generate_pages.py
+    - name: Unit tests
+      run: |
+        python -m unittest discover -s tests
     - name: Install html test
       run: |
         sudo apt install -y tidy
