--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,7 +39,7 @@ jobs:
         python generate_pages.py
     - name: Unit tests
       run: |
-        python -m unittest discover -s tests
+        python -m unittest discover -s ./tests
     - name: Install html test
       run: |
         sudo apt install -y tidy
